--- a/src/hello/devcontainer-feature.json
+++ b/src/hello/devcontainer-feature.json
@@ -1,22 +1,19 @@
 {
-    "name": "Hello, World!",
-    "id": "hello",
-    "version": "1.0.2",
-    "description": "A hello world feature",
+    "name": "Install Lefthook",
+    "id": "install_lefthook",
+    "version": "0.0.1",
+    "description": "Install lefthook in you devcontainer",
     "options": {
         "greeting": {
-            "type": "string",
+            "type": "bool",
             "proposals": [
-                "hey",
-                "hello",
-                "hi",
-                "howdy"
+                true,
+                false
             ],
-            "default": "hey",
-            "description": "Select a pre-made greeting, or enter your own"
+            "default": true,
+            "description": "Whether to auto install hook"
         }
     },
     "installsAfter": [
-        "ghcr.io/devcontainers/features/common-utils"
     ]
 }
